--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 #titulo {
   font-family: "PT Serif", serif;
 }
+.color_logo {
+  background-color: #161817;
 
+}
 .container-wa .floating-button {
   position: fixed;
   bottom: 40px;
