--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,18 @@
+@import url('whatsapp-button.css');
+
+:root{
+    --main-dark: #161817;
+    --main-gold: #D4A067;
+}
+
 #titulo {
   font-family: "PT Serif", serif;
 }
-.color_logo {
-  background-color: #161817;
 
-}
-.container-wa .floating-button {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  width: 60px;
-  height: 60px;
-  background-color: #25d366;
-  color: white;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 35px;
-  cursor: pointer;
-  box-shadow: 0px 2px 5px #666;
-}
-.container-wa .floating-button:hover {
-  background-color: #1fad53;
-}
-.container-wa .floating-button .icon {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  line-height: 60px;
-  text-align: center;
-  transition: all 0.3s;
-}
-.container-wa .floating-button .icon.wa {
-  animation: wa-out 0.3s;
+.fondo-dark{
+  background-color: var(--main-dark);
 }
 
-/* @keyframes wa-in {
-  from {
-    opacity: 1;
-    transform: rotateZ(0deg);
- }
-  to {
-    opacity: 0;
-    transform: rotateZ(180deg);
- }
-} */
-
-@keyframes wa-out {
-  from {
-    opacity: 0;
-    transform: rotateZ(180deg);
-  }
-  to {
-    opacity: 1;
-    transform: rotateZ(0deg);
-  }
+.text-gold{
+    color: var(--main-gold);
 }
