--- a/css/whatsapp-button.css
+++ b/css/whatsapp-button.css
@@ -17,15 +17,9 @@
   background-color: #1fad53;
 }
 .grecaptcha-badge {
-  left: 10px !important; /* Posición inicial a la izquierda */
-  right: auto !important; /* Desactiva la alineación a la derecha */
-  bottom: 10px !important; /* Mantiene la distancia desde abajo */
-  transition: transform 0.3s ease-in-out; /* Suaviza el movimiento */
-}
-
-/* Cuando el mouse pase sobre el icono */
-.grecaptcha-badge:hover {
-  transform: translateX(50px); /* Se mueve hacia la derecha */
+  bottom: 10px !important;
+  right: 10px !important;
+  left: auto !important;
 }
 
 .container-wa {
